  result in smallish eventual returned automata.  (Robert Muir, Mike McCandless)

* LUCENE-9983: Stop sorting determinize powersets unnecessarily. (Patrick Zhai)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------

* LUCENE-9988: Fix DrillSideways correctness bug introduced in LUCENE-9944 (Greg Miller)

Other
---------------------

======================= Lucene 8.9.0 =======================

API Changes
---------------------

* LUCENE-9680: Removed deprecation warning from IndexWriter#getFieldNames(). (Oren Ovadia)

New Features
---------------------

* LUCENE-9575: PatternTypingFilter has been added to allow setting a type attribute on tokens based on
  a configured set of regular expressions (Gus Heck).

* LUCENE-9572: TypeAsSynonymFilter has been enhanced support ignoring some types, and to allow
  the generated synonyms to copy some or all flags from the original token (Gus Heck).

* LUCENE-9574 A token filter to drop tokens that match all specified flags. (Gus Heck, Uwe Schindler)

* LUCENE-9537:  Added smoothingScore method and default implementation to 
  Scorable abstract class.  The smoothing score allows scorers to calculate a 
  score for a document where the search term or subquery is not present.  The 
  smoothing score acts like an idf so that documents that do not have terms or 
  subqueries that are more frequent in the index are not penalized as much as 
  documents that do not have less frequent terms or subqueries and prevents 
  scores which are the product or terms or subqueries from going to zero. Added 
  the implementation of the Indri AND and the IndriDirichletSimilarity from the 
  academic Indri search engine: http://www.lemurproject.org/indri.php. 
  (Cameron VandenBerg)   

* LUCENE-9694: New tool for creating a deterministic index to enable benchmarking changes
  on a consistent multi-segment index even when they require re-indexing. (Haoyu Zhai)
